# rabid

./: BACKGROUND.md  LICENSE  README.md  comparison.cpp  example.cpp  meson.build  overhead.cpp
include/: Executor.h  capture.h  function_traits.h  future.h  interconnect.h  intrusive.h  referenced.h
include/detail/: container.h  coupling.h  expression.h
test/: main.cpp  meson.build  unit_test_executor.cpp
